Fix menu and tabs toolbar visibility when in a maximized window on Windows 10
- Inherit text color for menu bar when not using a lightweight theme
- Do not enforce transparent menu and tabs toolbar when in a maximized window while customizing the toolbar

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -3152,18 +3152,21 @@ toolbar[brighttext] #addonbar-closebutton {
   }
   
   /* Make these toolbars transparent and removes borders that overlap the caption buttons when the window is maximized nad tabs are on top */
-  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"]:not(:-moz-lwtheme),
-  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"] ~ #TabsToolbar:not(:-moz-lwtheme) {
+  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"]:not([customizing]):not(:-moz-lwtheme),
+  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"]:not([customizing]) ~ #TabsToolbar:not(:-moz-lwtheme) {
     background-color: transparent !important;
     color: var(--window-text-color);
     border-left-style: none !important;
     border-right-style: none !important;
   }
-  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"] ~ #TabsToolbar {
-    border-top: none;
+  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"]:not([customizing]) {
+    border-style: none;
   }
-  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"] {
-    border: none;
+  #main-window[sizemode="maximized"][tabsontop=true] #toolbar-menubar[autohide="true"]:not([customizing]) ~ #TabsToolbar {
+    border-top-style: none;
+  }
+  #main-menubar > menu:not([_moz-menuactive]):not([disabled="true"]):not(:-moz-lwtheme) {
+    color: inherit;
   }
     
 /* Show toolbar borders on vista through win8, but not on win10 and later: */
